// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactDeveloperSection should match snapshot with gutter 1`] = `
<Component
  hasGutter={true}
  header="Contact Developer"
>
  <Component
    dataTest="btn-help"
    onClick={[Function]}
    type="button"
    variant="primary"
  >
    NEED HELP?
  </Component>
  <Component
    afterClose={[Function]}
    footerItems={
      <Unknown
        dataTest="btn-close-modal"
        disabled={false}
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        Close
      </Unknown>
    }
    title="Contact Details"
    visible={false}
  >
    <Component>
      <Component>
        <Component>
          Company name
        </Component>
      </Component>
      <Component>
        <Component>
          Reapit Ltd
        </Component>
      </Component>
    </Component>
    <Component>
      <Component>
        <Component>
          Telephone Number
        </Component>
      </Component>
      <Component>
        <Component>
          0777 777 777
        </Component>
      </Component>
    </Component>
    <Component>
      <Component>
        <Component>
          Support Emai
        </Component>
      </Component>
      <Component>
        <Component>
          <a
            className={[Function]}
            href="mailto:reapit@reapit.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            reapit@reapit.com
          </a>
        </Component>
      </Component>
    </Component>
    <Component>
      <Component>
        <Component>
          Home Page
        </Component>
      </Component>
      <Component>
        <Component>
          <a
            className={[Function]}
            href="https://reapit.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://reapit.com
          </a>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;

exports[`ContactDeveloperSection should match snapshot without gutter 1`] = `
<Component
  hasGutter={false}
  header="Contact Developer"
>
  <Component
    dataTest="btn-help"
    onClick={[Function]}
    type="button"
    variant="primary"
  >
    NEED HELP?
  </Component>
  <Component
    afterClose={[Function]}
    footerItems={
      <Unknown
        dataTest="btn-close-modal"
        disabled={false}
        onClick={[Function]}
        type="button"
        variant="primary"
      >
        Close
      </Unknown>
    }
    title="Contact Details"
    visible={false}
  >
    <Component>
      <Component>
        <Component>
          Company name
        </Component>
      </Component>
      <Component>
        <Component>
          Reapit Ltd
        </Component>
      </Component>
    </Component>
    <Component>
      <Component>
        <Component>
          Telephone Number
        </Component>
      </Component>
      <Component>
        <Component>
          0777 777 777
        </Component>
      </Component>
    </Component>
    <Component>
      <Component>
        <Component>
          Support Emai
        </Component>
      </Component>
      <Component>
        <Component>
          <a
            className={[Function]}
            href="mailto:reapit@reapit.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            reapit@reapit.com
          </a>
        </Component>
      </Component>
    </Component>
    <Component>
      <Component>
        <Component>
          Home Page
        </Component>
      </Component>
      <Component>
        <Component>
          <a
            className={[Function]}
            href="https://reapit.com"
            rel="noopener noreferrer"
            target="_blank"
          >
            https://reapit.com
          </a>
        </Component>
      </Component>
    </Component>
  </Component>
</Component>
`;
